--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -21,11 +21,11 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 158px 25px 61px;
+    padding: 142px 25px 56px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 170px 50px 70px;
+    padding: 150px 50px 70px;
   }
 }
 
@@ -33,8 +33,8 @@
   .title();
   margin: 0;
   text-align: start;
-  padding-top: 8px;
-  padding-bottom: 16px;
+  padding-top: 9px;
+  padding-bottom: 15px;
 
   @media (min-width: @tablet-width) {
     font-size: 21px;
@@ -42,6 +42,41 @@
     text-align: center;
     padding-top: 0;
     margin-bottom: 9px;
+
+    &--housing {
+      padding-top: 16px;
+      padding-left: 17px;
+      margin-bottom: 23px;
+    }
+
+    &--eating {
+      margin-bottom: 25px;
+    }
+
+    &--souvenir {
+      padding-right: 22px;
+      margin-bottom: 24px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+    margin: 0;
+
+    &--housing {
+      padding-top: 16px;
+      padding-left: 17px;
+      margin-bottom: 23px;
+    }
+
+    &--eating {
+      margin-bottom: 25px;
+    }
+
+    &--souvenir {
+      padding-right: 18px;
+      margin-bottom: 23px;
+    }
   }
 }
 
@@ -52,5 +87,35 @@
 
   @media (min-width: @tablet-width) {
     text-align: center;
+
+    &--housing {
+      padding-left: 16px;
+    }
+
+    &--eating {
+      padding-right: 18px;
+      padding-left: 21px;
+    }
+
+    &--souvenir {
+    padding-right: 22px;
+    padding-bottom: 4px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    // &--housing {
+    //   padding-left: 16px;
+    // }
+
+    &--eating {
+      padding-right: 0;
+      padding-left: 0;
+    }
+
+    &--souvenir {
+    padding-right: 0;
+    padding-bottom: 0;
+    }
   }
 }
