--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,5 +1,5 @@
 .footer {
-  padding: 22px 20px 20px;
+  padding: 0 20px 20px;
 
   @media (min-width: @tablet-width) {
     min-width: 648px;
@@ -7,6 +7,7 @@
     justify-content: space-between;
     padding: 0 60px;
     align-items: center;
+    padding-top: 9px;
   }
 
   @media (min-width: @desktop-width) {
@@ -15,51 +16,14 @@
   }
 }
 
-.social__list {
-  .list();
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  width: 156px;
-  gap: 6px;
-  margin-bottom: 21px;
-}
-
-.social__link {
-  display: block;
-  position: relative;
-  width: 48px;
-  height: 48px;
-  background-color: @base-color;
-
-
-  &:hover {
-    background-color: @hover-color;
-  }
-
-  &:focus,
-  &:active {
-    background-color: @active-color;
-  }
-
-  &:active::before {
-    opacity: 0.3;
-  }
-}
-
-.social__link--logo {
-  position: absolute;
-  width: 24px;
-  height: 24px;
-  top: 50%;
-  left: 50%;
-  fill: @white;
-  transform: translate(-50%, -50%);
-}
-
 .footer__hashtag {
   margin: 0;
   margin-bottom: 30px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+    padding-right: 72px;
+  }
 }
 
 .footer__link {
@@ -70,31 +34,4 @@
   text-align: center;
   font-size: 21px;
   font-weight: 700;
-}
-
-.copyright {
-  padding-bottom: 23px;
-}
-
-.copyright__logo {
-  vertical-align: middle;
-}
-
-.copyright__link {
-  display: block;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: @black;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-
-  &:hover {
-    color: #669ec0;
-  }
-
-  &:active,
-  &:focus {
-    color: #b3b3b3;
-  }
 }
