--- a/source/less/blocks/hero-banner.less
+++ b/source/less/blocks/hero-banner.less
@@ -1,9 +1,20 @@
 .hero-banner {
+  position: relative;
   background-image: url("../img/hero-banner/back-mobile.jpg");
   background-color: @current-color;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 0;
+
+  &::after{
+    content: "";
+    position: absolute;
+    background-image: url("../img/icons/intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    bottom: 0;
+    width: 100%;
+    height: 57px;
+  }
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/hero-banner/back-mobile@2x.jpg");
@@ -12,6 +23,16 @@
   @media (min-width: @tablet-width) {
     background-image: url("../img/hero-banner/back-tablet.jpg");
 
+    &::after{
+      content: "";
+      position: absolute;
+      background-image: url("../img/icons/intro-triangle-tablet.svg");
+      background-repeat: no-repeat;
+      bottom: 0;
+      width: 100%;
+      height: 57px;
+    }
+
     @media (min-resolution: 2dppx) {
       background-image: url("../img/hero-banner/back-tablet@2x.jpg");
     }
@@ -19,6 +40,16 @@
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/hero-banner/back-desktop.jpg");
+
+    &::after{
+      content: "";
+      position: absolute;
+      background-image: url("../img/icons/intro-triangle-desktop.svg");
+      background-repeat: no-repeat;
+      bottom: 0;
+      width: 100%;
+      height: 57px;
+    }
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/hero-banner/back-desktop@2x.jpg");
@@ -34,6 +65,7 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 78px;
+    padding-bottom: 91px;
     width: 460px;
     height: 350px;
   }
