--- a/source/less/blocks/page-intro.less
+++ b/source/less/blocks/page-intro.less
@@ -1,7 +1,24 @@
 .page-intro {
   padding: 32px 18px 16px;
+  position: relative;
+
+  &::after {
+    position: absolute;
+    content: "";
+    background-image: url("../img/icons/bottom-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 37px;
+    bottom: -37px;
+    left: 0;
+    z-index: 1;
+  }
 
   @media (min-width: @tablet-width) {
+    &::after {
+      display: none;
+    }
+
     margin: 0 auto;
     padding: 47px;
     padding-bottom: 57px;
@@ -10,7 +27,7 @@
   @media (min-width: @desktop-width) {
     width: 484px;
     padding-top: 59px;
-    padding-bottom: 45px;
+    padding-bottom: 23px;
   }
 }
 
@@ -43,8 +60,9 @@
 
 .page-intro__header {
   .title();
-  margin: 0;
-  margin-bottom: 25px;
+  margin: auto;
+  width: 90%;
+  margin-bottom: 36px;
 
   br {
     display: none;
