--- a/source/less/blocks/search.less
+++ b/source/less/blocks/search.less
@@ -1,6 +1,7 @@
 .search {
   padding-left: 18px;
   padding-right: 18px;
+  padding-top: 38px;
 
   @media (min-width: @tablet-width) {
     width: 458px;
@@ -15,8 +16,8 @@
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
-  margin-top: 40px;
-  margin-bottom: 22px;
+  margin: 0;
+  margin-bottom: 20px;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
@@ -33,8 +34,8 @@
 .search__text {
   .text();
   margin: 0 auto;
-  margin-bottom: 30px;
-  padding-left: 12px;
+  margin-bottom: 32px;
+  padding-left: 11px;
   padding-right: 12px;
 
   @media (min-width: @tablet-width) {
@@ -84,5 +85,5 @@
 .search-map-frame {
   width: 100%;
   height: 350px;
-  margin-bottom: 31px;
+  margin-bottom: 14px;
 }
