--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,3 +1,11 @@
+.social {
+  margin-bottom: 42px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 0;
+    padding-right: 75px;
+  }
+}
 
 .social__list {
   .list();
